--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-sass": "^2.0.1",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.2.0",
+    "gulp-uncss": "^1.0.4",
     "imagemin-jpegoptim": "^4.0.0",
     "imagemin-optipng": "^4.3.0",
     "imagemin-pngquant": "^4.1.2",
