--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.3.0",
+    "gulp-cssnano": "^2.0.0",
     "gulp-gh-pages": "^0.5.2",
     "gulp-minify-css": "^1.1.6",
     "gulp-notify": "^2.2.0",
