--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "cafe-panique",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Cafe Panique",
   "homepage": "https://github.com/jacbac/cafe_panique",
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp",
-    "deploy": "gulp deploy"
+    "deploy": "gulp deploy",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -r ./node_modules/",
+    "clean-install": "rm -r ./node_modules/ && npm install"
   },
   "repository": {
     "type": "git",
@@ -14,32 +17,37 @@
   },
   "keywords": [
     "Novel",
-    "Pictures"
+    "Photos",
+    "Typography"
   ],
   "contributor": {
     "name": "jacbac"
   },
   "license": "WTF Licence",
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "browser-sync": "^2.7.10",
-    "del": "^2.0.2",
+    "cssnano": "^3.10.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-changed": "^1.3.0",
+    "gulp-changed": "^3.1.1",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.0.0",
     "gulp-gh-pages": "^0.5.2",
+    "gulp-image": "^4.0.0",
     "gulp-minify-css": "^1.1.6",
-    "gulp-notify": "^2.2.0",
+    "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.0.1",
+    "gulp-postcss": "^7.0.0",
+    "gulp-sass": "^3.1.0",
     "gulp-size": "^2.0.0",
-    "gulp-uglify": "^1.2.0",
-    "gulp-uncss": "^1.0.4",
-    "imagemin-jpegoptim": "^4.0.0",
-    "imagemin-optipng": "^4.3.0",
-    "imagemin-pngquant": "^4.1.2",
-    "imagemin-svgo": "^4.1.2",
-    "path": "^0.12.7"
+    "gulp-uglify": "^3.0.0",
+    "gulp-uncss": "^1.0.6",
+    "imagemin-jpegoptim": "^5.1.0",
+    "imagemin-optipng": "^5.2.1",
+    "imagemin-pngquant": "^5.0.1",
+    "imagemin-svgo": "^6.0.0",
+    "path": "^0.12.7",
+    "uncss": "^0.15.0"
   }
 }
